--- a/styles/mainstyle.css
+++ b/styles/mainstyle.css
@@ -11,6 +11,7 @@ body {
 .Button {
     height: 5vh;
     width: 15vh;
-    background-color: orange;
+    background-color: grey;
+    color: white;
     cursor: pointer;
 }
