--- a/styles/projectsstyle.css
+++ b/styles/projectsstyle.css
@@ -1,5 +1,5 @@
 body {
-    font-family: sans-serif;
+    font-family: cursive;
     background-color: rgb(50, 50, 50);
     color: white;
 }
@@ -9,10 +9,49 @@ body {
 }
 
 .Button {
+    font-family: cursive;
     height: 5vh;
     width: 15vh;
     background-color: grey;
     color: white;
     border-radius: 0.5vh;
     cursor: pointer;
+}
+
+.Button:hover {
+    animation-name: mouseEnter;
+    animation-duration: 250ms;
+    animation-timing-function: ease-out, cubic-bezier(0.165, 0.84, 0.44, 1);
+    animation-fill-mode: forwards;
+}
+
+.Button:not(:hover) {
+    animation-name: mouseLeave;
+    animation-duration: 250ms;
+    animation-timing-function: ease-out, cubic-bezier(0.165, 0.84, 0.44, 1);
+    animation-fill-mode: forwards;
+}
+
+@keyframes mouseEnter {
+    from {
+        background-color: grey;
+        color: white;
+    }
+
+    to {
+        background-color: white;
+        color: black;
+    }
+}
+
+@keyframes mouseLeave {
+    from {
+        background-color: white;
+        color: black;
+    }
+
+    to {
+        background-color: grey;
+        color: white;
+    }
 }
